# qt-udp-test

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypushbutton.cpp  mypushbutton.h
android/: AndroidManifest.xml
